components/aap-portal/aap-portal-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aap-portal
  annotations:
    argocd.argoproj.io/sync-wave: '-2'
